[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/gui/lobby.png" type="Texture" id=1]
[ext_resource path="res://fonts/BebasKai.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/lobby.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/sfx/Menu/Menu Selection Click.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/shaders/transition.shader" type="Shader" id=5]
[ext_resource path="res://scripts/fade_in.gd" type="Script" id=6]

[sub_resource type="Environment" id=1]
background_mode = 4
fog_color = Color( 0.611765, 0.105882, 0.717647, 1 )
dof_blur_near_distance = 1.0
glow_enabled = true
glow_bloom = 0.1
glow_hdr_threshold = 1.07
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=2]
size = 96
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.898305, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.871186, 0.871186, 0.871186, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 5 )
shader_param/cutoff = 0.0
shader_param/smooth_size = 1.0
shader_param/mask = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Lobby" type="Control"]
margin_right = 1024.0
margin_bottom = 768.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( -220.181, -1.68176 )
scale = Vector2( 0.813432, 0.813432 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="menu_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="title _label" type="Label" parent="."]
anchor_left = 0.005
anchor_top = -0.005
anchor_right = 0.005
anchor_bottom = -0.005
margin_left = 214.831
margin_top = 17.7421
margin_right = 616.831
margin_bottom = 122.742
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.792157, 0.792157, 0.792157, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "LOBBY"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="fade_in" type="ColorRect" parent="."]
visible = false
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -17.0
margin_right = 17.0
margin_bottom = 23.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="menu_vbox" type="VBoxContainer" parent="."]
margin_left = 55.4991
margin_top = 279.177
margin_right = 332.499
margin_bottom = 702.177
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host_button" type="Button" parent="menu_vbox"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_right = 276.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.792157, 0.792157, 0.792157, 1 )
text = "HOST"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="client_button" type="Button" parent="menu_vbox"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_top = 99.0
margin_right = 276.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.792157, 0.792157, 0.792157, 1 )
text = "CLIENT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_button" type="Button" parent="menu_vbox"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_top = 198.0
margin_right = 276.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.792157, 0.792157, 0.792157, 1 )
text = "NETWORK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="menu_vbox"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_top = 297.0
margin_right = 276.0
margin_bottom = 356.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.792157, 0.792157, 0.792157, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="menu_vbox/host_button" to="." method="_on_host_button_mouse_entered"]
[connection signal="mouse_entered" from="menu_vbox/client_button" to="." method="_on_client_button_mouse_entered"]
[connection signal="mouse_entered" from="menu_vbox/options_button" to="." method="_on_options_button_mouse_entered"]
[connection signal="mouse_entered" from="menu_vbox/back_button" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="menu_vbox/back_button" to="." method="_on_back_button_pressed"]
